--- a/styles.css
+++ b/styles.css
@@ -21,3 +21,10 @@ h1{
 h2{
     color: black;
 }
+
+.special {
+    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif';
+    font-weight: Bold;
+    font-size: 40px;
+    text-align: :left;
+}
