--- a/styles.css
+++ b/styles.css
@@ -28,8 +28,10 @@ h2{
     font-size: 40px;
     text-align: :left;
 }
+
 ul{
     list-style-type: square;
+    text-align: left;
 }
 ol{
     list-style-type: upper-roman;
@@ -41,4 +43,10 @@ li{
 }
 .fave{
     color:orangered;
+}
+.pizza{
+    width: 50%;
+}
+a{
+    color: white;
 }
